:lipstick: 경고 모달 창 추가

--- a/game-bac.html
+++ b/game-bac.html
@@ -124,7 +124,7 @@
                     <h2 class="modal__content-desc--main">감춰진 4자리 숫자를 맞춰보세요!</h2>
                     <ul class="modal__content-desc--list">
                         <li class="test">
-                            감춰진 4자리 숫자와 정확한 위치를 9회 안에 모두 맞춰야 성공!
+                            감춰진 4자리 숫자를 9회 안에 모두 맞춰야 성공!
                         <li>
                             숫자는 0~9까지의 범위로 되어 있으며, 첫 번째 숫자가 0일 수도 있습니다.
                         </li>
@@ -144,6 +144,17 @@
                 </div>
         
                 <button class="white-button modal__content-close-button" id="info-modal-close-button" type="button">
+                    닫기
+                </button>
+            </div>
+        </div>
+
+        <div class="modal modal-layer alert-modal" id="alert-modal">
+            <div class="modal__content">
+                <div class="modal__content-title" id="alert-modal-title">
+                </div>
+        
+                <button class="white-button modal__content-close-button" id="alert-modal-close-button" type="button">
                     닫기
                 </button>
             </div>
