--- a/game-bac.html
+++ b/game-bac.html
@@ -105,7 +105,7 @@
                                 <input type="text" id="num3" name="num3" class="form__input" maxlength="1" inputmode="numeric" />
                                 <input type="text" id="num4" name="num4" class="form__input" maxlength="1" inputmode="numeric" />
                             </div>
-                            <button type="button" class="white-button form__button" id="bat-form-button" onclick="inputCheck();">
+                            <button type="button" class="white-button form__button" id="bat-form-button" onclick="checkInput();">
                                 확인
                             </button>
                         </form>
