:adhesive_bandage: 숫자 야구 aria-label을 좀 더 구체적으로 수정

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </article>
 
             <article class="game__wrapper" id="bulls-and-cows" aria-hidden="true">
-                <a class="game__overlay" href="./game-bac.html" aria-label="숫자 야구: 숫자 야구 게임을 즐겨보세요!"></a>
+                <a class="game__overlay" href="./game-bac.html" aria-label="숫자 야구: 감춰진 4자리 숫자를 9회 안에 맞춰보세요."></a>
                 <figure class="game__image"></figure>
                 <h1 class="game__title" lang="en">
                     숫자 야구
